# open-soft-2015-2016

./: .gitignore  FinalSep.cpp  README.md  vertical_text_seg.cpp
GUI/OpenSoft_2016/graphextractor/: main.cpp
GUI/graphextractor/: graphextractor.qrc  main.cpp  mainwindow.cpp  mainwindow.h
GUI/qpdflib/: Makefile
GUI_Installer/: dependencies.sh  graph_extract_install.sh  graph_extractor_install.sh
Installer/: dependencies.sh  graph_extract_install.sh
New Submission/: .gitignore
New Submission/Console/: CMakeLists.txt  box-detection.hpp  color-segmentation.cpp  detect-color.cpp  gen-table.cpp  graph-box.cpp  legend-box.cpp  make-pdf.cpp  pdfbuilder.cpp  pdfbuilder.h  peakdetect.h  preprocessing.cpp  remove-text.cpp  scale.cpp  test.cpp  text_seg.cpp  unColoring.cpp  x_label_batman.cpp  xaxis-granularity.cpp
New Submission/Console_Installer/: dependencies.sh  graph_extractor_install.sh  install.sh
New Submission/GUI/: GUI.pro
New Submission/GUI/graphextractor/: customitem.cpp  customitem.h  graphextractor.pro  graphstruct.cpp  graphstruct.h  main.cpp  mainwindow.cpp  mainwindow.h  pdfprocessor.cpp  pdfprocessor.h  plotstructure.cpp  plotstructure.h
New Submission/GUI/qcustomplot/: qcp.h  qcustomplot.h  qcustomplot.pro
New Submission/GUI/qpdflib/: qpdf.h  qpdflib.pro
New Submission/Installer/: dependencies.sh  graph_extractor_install.sh  install.sh  run.sh
PDFBuilder/: pdfbuilder.cpp  pdfbuilder.h
PlotExtract/: FinalSep.cpp  HSL.cpp  KmeansSep.cpp  QuantSep.cpp  backtrackSep.cpp  color-segmentation  color-segmentation.cpp  out.csv  peakdetect  peakdetect.c  res.csv
Submission/: .gitignore
Submission/Console/: ComputerVision.cpp  box-detection.cpp  box-detection.hpp  gen-table.cpp  graph-candidates.cpp  legend-box.cpp  legendDetection.cpp  legendDetection2.cpp  make-pdf.cpp  pdfbuilder.cpp  scale.cpp  skew-detection.cpp  test.cpp  text_seg.cpp  unColoring.cpp  x_label_batman.cpp  xaxis-granularity.cpp  y_label_batman.cpp
Submission/Console_Installer/: dependencies.sh  graph_extractor_install.sh  run.sh
Submission/GUI/: .gitignore  GUI.pro
Submission/GUI/graphextractor/: graphextractor.pro  mainwindow.cpp  mainwindow.h  pdfprocessor.cpp  pdfprocessor.h
Submission/GUI/qpdflib/: qpdfwidget.cpp
Submission/GUI_Installer/: dependencies.sh  graph_extractor_install.sh
Submission/Installer/: dependencies.sh  graph_extractor_install.sh  install.sh  run.sh
ocr/: CMakeLists.txt  ComputerVision.cpp  box-detection.cpp  box-detection.hpp  build.sh  color-segemntation  color-segmentation  color-segmentation.cpp  detect-color.cpp  dig_out.txt  gen-table.cpp  graph-box.cpp  graph-candidates.cpp  helper.cpp  legend-box.cpp  legendDetection  legendDetection.cpp  legendDetection2.cpp  legend_boxes.txt  legend_text.txt  make.sh  orientation.cpp  out.csv  out.hocr  out1.csv  pdfbuilder.cpp  pdfbuilder.h  peakdetect.cpp  preprocessing.cpp  remove-text.cpp  res.csv  res1.csv  scale.cpp  skew-detection.cpp  temp.ppm  test  test.cpp  text_seg.cpp  unColoring  unColoring.cpp  (+3 more)
